# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

package("gapii") {
  libraries = [ {
    name = "libgapii.so"
  } ]
  meta = [ {
    path = rebase_path("meta/sandbox")
    dest = "sandbox"
  } ]
  deps = [
    "//third_party/gapid/gapii/cc"
  ]
}
