# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

package("gapii") {
  system_image = true

  deps = [ "//third_party/gapid/gapii/vulkan/vk_graphics_spy/cc:libVkLayerGraphicsSpy" ]

  libraries = [ {
    name = "libgapii.so"
  },
  {
    name = "libVkLayerGraphicsSpy.so"
  } ]

  resources = [ {
    path = rebase_path("//third_party/gapid/gapii/vulkan/vk_graphics_spy/cc/GraphicsSpyLayer.json")
    dest = "vulkan/explicit_layer.d/GraphicsSpyLayer.json"
  } ]
}
