# Copyright (C) 2018 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

config("cityhash_config") {
  include_dirs = [ "//third_party/gapid/bazel-bin/external/cityhash/_virtual_includes/cityhash" ]
}

source_set("cityhash") {
  public_configs = [ ":cityhash_config" ]
  sources = [ "//third_party/gapid/bazel-gapid/external/cityhash/src/city.cc" ]
}

config("core_cc_config") {
  include_dirs = [
    "//third_party/gapid",
    "//third_party/gapid/bazel-gapid/external/com_github_google_protobuf/src"
  ]
  cflags_cc = [
    "-Wno-ignored-qualifiers",
    "-Wno-reorder",
    "-Wno-unused-private-field",
    "-Wno-unused-variable",
    "-Wno-delete-non-virtual-dtor",
  ]
  defines = [ 
    "TARGET_OS_FUCHSIA",
    "GOOGLE_PROTOBUF_NO_RTTI",
  ]
}

source_set("cc") {
  public_configs = [ ":core_cc_config" ]
  include_dirs = [
    "//third_party/gapid",
    "//third_party/gapid/bazel-genfiles" 
  ]
  sources = [
    "gl/formats.cpp",
    "dl_loader.cpp",
    "id.cpp",
    "log.cpp",
    "linux/thread.cpp",
    "fuchsia/get_gles_proc_address.cpp",
    "linux/get_vulkan_proc_address.cpp",
    "posix/thread.cpp",
    "socket_connection.cpp",
  ]
  sources += [
    "//third_party/gapid/bazel-genfiles/core/image/image.pb.cc",
    "//third_party/gapid/bazel-genfiles/core/data/pod/pod.pb.cc",
    "//third_party/gapid/bazel-genfiles/core/os/device/device.pb.cc",
    "//third_party/gapid/bazel-genfiles/core/stream/stream.pb.cc",
  ]
  deps = [ ":cityhash" ]
}
