# Copyright (C) 2018 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/package.gni")

static_library("interceptor") {
  include_dirs = [ 
    "include",
    "//third_party/gapid/bazel-out/host/bin/external/llvm/_virtual_includes/headers",
    "//third_party/gapid/bazel-out/host/bin/tools/build/third_party/_virtual_includes/llvm-config",
    "//third_party/gapid/bazel-out/host/bin/tools/build/third_party/_virtual_includes/llvm-platform-config",
  ]
  sources = [
    "lib/code_generator.cc",
    "lib/constant_pool_data_expr.cc",
    "lib/disassembler.cc",
    "lib/error.cc",
    "lib/interceptor.cc",
    "lib/linker.cc",
    "lib/memory_manager.cc",
    "lib/target.cc",
  ]
}
